--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -41,7 +41,7 @@ task:
       - cd ~/rom
       - rm -rf * .repo
       - repo init -q --no-repo-verify --depth=1 -u https://github.com/Night-Raids-Reborn/manifest-rom -b rr -g default,-mips,-darwin,-notdefault
-      - git clone https://github.com/limestonetwo/local_manifest --depth 1 -b lineage .repo/local_manifests
+      - git clone https://github.com/limestonetwo/local_manifest --depth 1 -b rr .repo/local_manifests
       - repo sync -c --no-clone-bundle --no-tags --optimized-fetch --prune --force-sync -j8
       - curl -s https://api.telegram.org/$tokentl/sendMessage -d chat_id=$idtl -d text="Sync Completed!"
 
