--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,9 +10,10 @@ task:
   name: "Setting Up, Syncing, Building and Uploading..."
   timeout_in: 480m  
   container:
-      image: inok2341/anu:latest
-      cpu: 8
-      memory: 32G
+    image: apon77/aosp:cirrus
+    cpu: 8
+    memory: 32G
+  
         
   Build-Env-Setup_background_script:
        - export DEBIAN_FRONTEND=noninteractive
